[project]
name = "backsub"
dynamic = ["version"]
description = "Channel subtraction scaled by exposure times"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name="Krešimir Bestak", email="kbestak@gmail.com" }
]
keywords = ["autofluorescence", "imaging", "immunofluorescence", "subtraction"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Windows",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pandas",
    "tifffile",
    "ome_types",
    "numpy",
    "loguru",
    "dask",
    "dask-image",
    "scikit-image",
    "zarr>=3"
]
[project.urls]
Homepage = "https://github.com/schapirolabor/background_subtraction"
Issues = "https://github.com/schapirolabor/background_subtraction/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "backsub._version.__version__"}

[project.scripts]
backsub = "backsub.background_sub:main"
